# BioRAG

./: .gitignore  .gitignore.swp  Directory_structure.py  LICENSE  README.md  pyproject.toml  requirements.txt
cell/: pyvenv.cfg
notebooks/: inedxing_experiments_openai.ipynb
notebooks/chroma_db/: chroma.sqlite3
scripts/: ingest_documents.py
src/chains/: table_summary_chain.py
src/config/: exception.py  logging.py
src/constants/: __init__.py
src/embeddings/: embedder.py
src/ingestion/: pipeline.py
src/ingestion/enrichment/: base.py  table_summary.py
src/ingestion/loader/: base.py  pdfloader.py
src/ingestion/preprocess/: base.py  cleaner.py
src/ingestion/splitting/: SectionBased_splitter.py  base.py  chunking.py
src/models/: Llama.py  base.py  table_summariser.py
src/prompts/: base.py  table_summariser_prompt.py
src/retrieval/: parent_retriever.py
src/vectorstore/: chroma_client.py  collections.py
