[project]
name = "BioRAG"
version = "0.0.1"
description = "Retrieval-Augmented Agent for scientific literature understanding."
authors = [
    {name= "Vraj Bhavsar", email = "vrajbhavsar377@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["RAG", "LANGCHAIN", "LLAMA3"]

# classifiers for PyPI 
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"